--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="https://github.com/maravilla">github.com/hankquinlan</a></li>
+	        		<li><a href="https://github.com/maravilla">github.com/maravilla</a></li>
 				</ul>
 			</footer>
 		</body>
